[package]
name = "ksql"
version = "0.1.2"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
description = "SQL-like shell for Apache Kudu"
keywords = ["kudu", "database", "sql"]

[profile.release]
panic = "abort"

[dependencies]
chrono = "0.2"
docopt = "0.6"
either = "1"
itertools = "0.4"
kudu = { git = "https://github.com/danburkert/kudu-rs" }
libc = "0.2"
rustc-serialize = "0.3"
rustyline = "1.0"
term = "0.4"
xdg-basedir = "1"
