[package]
name = "ksql"
version = "0.1.3"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "MIT/Apache-2.0"
description = "SQL-like shell for Apache Kudu"
keywords = ["kudu", "database", "sql"]

[profile.release]
panic = "abort"

[dependencies]
chrono = "0.4"
docopt = "1"
either = "1"
env_logger = "0.5"
futures = "0.1"
itertools = "0.7"
kudu = { git = "https://github.com/danburkert/kudu-rs", branch = "master" }
libc = "0.2"
rustyline = "1.0"
serde = "1"
serde_derive = "1"
prettytable-rs = "0.7"
term = "0.5"
tokio = "0.1"
# TODO: replace with 'directories'
xdg-basedir = "1"
